N°4351 Fix case log own entries overflowing when unnecessary

--- a/css/backoffice/layout/activity-panel/_activity-entry.scss
+++ b/css/backoffice/layout/activity-panel/_activity-entry.scss
@@ -81,7 +81,7 @@ $ibo-activity-panel--load-all-entries--is-hover--margin-left: ($ibo-activity-pan
 	/* Current or not user specificities */
 	&.ibo-is-current-user{
 		flex-direction: row-reverse;
-    min-width: max-content;
+    min-width: min-content;
 
 		.ibo-activity-entry--medallion{
 			margin-right: initial;
